--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,18 @@ version: "3.7"
 
 services: 
     webserver:
+        depends_on:
+            - db
         image: zacsketches/consul-example-webserver
         ports: 
             - "8080:8080"
+        networks: 
+            - example
+
+    db:
+        image: mongo
+        ports:
+            - "27017:27017"
         networks: 
             - example
 
